Image changes are done

--- a/src/app/portal-login/portal-login.component.html
+++ b/src/app/portal-login/portal-login.component.html
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="row login-card shadow-lg">
       <div class="col-md-6 login-image d-none d-md-flex">
-        <img src="public/login.png" alt="Hospital Login" />
+        <img src="/login.png" alt="Hospital Login" />
       </div>
 
       <div class="col-md-6">
